--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu9-3exLQ5PsDiyGHkwsdqRNAPG6NdBac&libraries=places"></script>
   <script async defer src="https://api.usersnap.com/load/a4211a15-055c-4663-b113-0bf3b4ea6724.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script src="https://cdn.ravenjs.com/3.16.0/raven.min.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!--
       Notice the use of %PUBLIC_URL% in the tag above.
